--- a/gateway-admin-ui/package.json
+++ b/gateway-admin-ui/package.json
@@ -26,6 +26,7 @@
     "ng2-ace-editor": "0.3.3",
     "ng2-bs3-modal": "^0.13.0",
     "ng2-validation": "^4.2.0",
+    "node-sass": "^4.14.1",
     "popper.js": "^1.14.7",
     "rest-url-builder": "^1.0.6",
     "rxjs": "^5.5.2",
